Fixed font-size testing problem on Mobile Safari

--- a/src/client/screen.css
+++ b/src/client/screen.css
@@ -192,7 +192,6 @@ strong {
 }
 
 #footer {
-	line-height: 1.2;
 	text-align: center;
 	margin-top: 13px;
 	margin-left: auto;
